# LocalGyrificationIndex

./: CMakeLists.txt  LICENSE  README.md
matlab/: OuterHull.m  compile.m  gauss3filter.m  read_vtk.m  voxelizer.m  write_vtk.m
matlab/ICP_finite/: ICP_finite.m  fminlbfgs.m
matlab/exec/: hull  lgi
script/: hull  lgi  make_outer_hull
src/: Gyrification.cpp  Gyrification.h
wrapper/: CMakeLists.txt  PARSE_ARGS.h  main.cpp  wrapper.xml
